# AudioMaster

./: .gitignore  PROGRESS-CAPITALS.md  add_template.py  app.py  check_tables.py  create_tables.py  db_setup.py  drop_tables.py  info.md  init_db.py  list_prompts.py  migrations.py  models.py  pyproject.toml  update_prompt.py
logs/: audiov4.log.1  audiov4.log.2  audiov4.log.3
migrations/: alembic.ini  env.py
migrations/versions/: 08ae61c57b5f_initial_migration.py  2024_11_27_01_initial.py  2024_11_27_02_add_version_column.py  2024_11_27_add_version_column.py  703f0519f0d9_add_prompttemplate_model.py  add_prompt_template_version.py  e6fe9fee46e8_create_initial_tables.py  fc21efcf1e86_.py
routes/: audiobooks.py  docs.py  outlines.py  prompts.py  questionnaires.py  templates.py
services/: ai_service.py  audio_service.py
static/css/: custom.css
static/js/: main.js
templates/: base.html  form_base.html
templates/audiobooks/: list.html
templates/docs/: docs.html
templates/outlines/: generate.html  list.html  view.html
templates/prompts/: create.html  edit.html  list.html  version.html  versions.html  view.html
templates/questionnaires/: list.html  respond.html  view.html
templates/templates/: create.html  edit.html  list.html  view.html
utils/: status_check.py
