[project]
name = "repl-nix-audiomaster"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-migrate>=4.0.7",
    "flask-login>=0.6.3",
    "openai>=1.55.1",
    "tenacity>=9.0.0",
    "python-dotenv",
    "alembic",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.36",
]
